Adding names to radio buttons

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <br>
   <br>
   <br>
-      <input type="radio" id="Enterprise">
+      <input type="radio" name="radio" id="Enterprise">
         <label for="Enterprise">Enterprise</label>
-      <input type="radio" id="Pro">
+      <input type="radio" name="radio" id="Pro">
         <label for="Pro">Pro</label>
-      <input type="radio" id="Free">
+      <input type="radio" name="radio" id="Free">
         <label for="Free">Free</label>
   <br>
   <br>
