Fixed errors, added labels for text inputs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>HTML Project 1</title>
 </head>
@@ -7,19 +7,24 @@
 <body>
   <form>
     <fieldset>
-      Email: <input type="text"><br>
+      <input type="text" id="email">
+        <label for="email">Email:</label>
     </fieldset>
-  <br>
+<br>
     <fieldset>
-      Password: <input type="text"><br>
+      <input type="text" id="password">
+        <label for="password">Password:</label>
     </fieldset>
-  <br>
+<br>
     <fieldset>
-      Github Username: <input type="text"><br>
+      <input type="text" id="GithubUser">
+        <label for="GithubUser">Github Username:</label>
     </fieldset>
+
   <br>
   <br>
   <br>
+
       <input type="radio" name="radio" id="Enterprise">
         <label for="Enterprise">Enterprise</label>
       <input type="radio" name="radio" id="Pro">
@@ -29,8 +34,8 @@
   <br>
   <br>
   <br>
-      <input type="checkbox" id="Remember Me">
-        <label for="Remember Me">Remember Me</label>
+      <input type="checkbox" id="RememberMe">
+        <label for="RememberMe">Remember Me</label>
 
   </form>
 
