Added submit button, made inputs required

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 <body>
   <form>
     <fieldset>
-      <input type="text" id="email">
-        <label for="email">Email:</label>
+      <label for="email">Email:</label>
+        <input type="text" id="email" required>
     </fieldset>
 <br>
     <fieldset>
-      <input type="text" id="password">
-        <label for="password">Password:</label>
+      <label for="password">Password:</label>
+        <input type="password" id="password" required>
+
     </fieldset>
 <br>
     <fieldset>
-      <input type="text" id="GithubUser">
-        <label for="GithubUser">Github Username:</label>
+      <label for="GithubUser">Github Username:</label>
+        <input type="text" id="GithubUser" required>
     </fieldset>
 
   <br>
@@ -38,6 +39,15 @@
         <label for="RememberMe">Remember Me</label>
 
   </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <input type="submit">
 
 </body>
 
